tests/vertical-slice/accept/array_repeat_runtime_count.hew
fn repeat_len(n: i64) -> i64 {
    let xs = [7; n];
    xs.len()
}

fn main() -> i64 {
    let n = 4;
    let len = repeat_len(n);
    if len != n {
        return 70;
    }
    0
}
