tests/vertical-slice/reject/std_panic_wrapper_regex_new_invalid.hew
import std::text::regex;

fn main() -> i64 {
    let re = regex.new("[");
    if re.is_match("anything") {
        1
    } else {
        0
    }
}
